selfhost/test/typechecker/import/error_duplicate_enum_name.1.out
Error at %FILE_NAME%:3:5
Duplicate name 'Color'
  |  val Color = "color"
         ^
This name is also declared at (1:8)
  |  import Color from "./_exports"
            ^
