selfhost/test/typechecker/import/error_duplicate_enum_name.4.abra
import Color from "./_exports"

enum Color {}
